# defer-cpp

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: defer.hpp
test/: .gitignore  CMakeLists.txt  main.cpp
